--- a/src/less/rowediting.less
+++ b/src/less/rowediting.less
@@ -14,8 +14,8 @@
 	padding: 0;
 	height: 100%;
 }
-.excel-table.row-edit-form input,
-.excel-table.row-edit-form select {
+.excel-table.row-edit-form .tb-cell > input,
+.excel-table.row-edit-form .tb-cell > select {
 	clear: both;
 	height: 100%;
 	padding: 1px 1px 1px 10px;
@@ -24,7 +24,7 @@
 .excel-table.row-edit-form .ctrl-panel-container{
 	float: left;
 	width: 100%;
-	margin-top: 5px;
+	margin-top: 1px;
 	position: relative;
 }
 .ctrl-panel-container .ctrl-panel-wrapper {
@@ -51,4 +51,43 @@
 	border: 1px solid #949CA1;
 	border-top: 0px;
 	text-align: center;
+}
+.multiSelect > button
+{
+	width: 100%;
+	border-radius: 0px;
+	background-image: none;
+    border-width: 1px;
+    border-style: solid;
+    height: 39px;
+    text-align: left;
+    color: #333;
+}
+.multiSelect > button:hover {
+	background-image: none;
+}
+.cell-edit {
+	height: 100%;
+}
+.cell-edit:after{
+	clear: both;
+	display: block;
+	content: " ";
+}
+.cell-edit > input.form-control{
+	float: left;
+	margin-right: -39px;
+	padding-right: 51px;
+	border-radius: 0px;
+	height: 100%;
+}
+.cell-edit > span.input-group-btn
+{
+	float: left;
+	width: 39px;
+	height: 100%;
+}
+.cell-edit.datepicker .input-group-btn button {
+	border-radius: 0px;
+	height: 100%;
 }
