--- a/src/template/table.html
+++ b/src/template/table.html
@@ -6,7 +6,11 @@
 				<i class="fa fa-sort-amount-asc"></i>
 			</span>
 		</div>
-		<div tb-cell data-index="{{$index}}" data-record="{{cell[primaryKey]}}" class="tb-cell row-{{$index+1}}" ng-repeat="cell in data | startFrom:(paging.currentPage-1)*paging.itemsPerPage | limitTo:paging.itemsPerPage track by $index" ng-switch="col.type">
+		<div ng-if="tableOption.type == 'local'" tb-cell data-index="{{$index}}" data-record="{{cell[primaryKey]}}" class="tb-row tb-cell row-{{$index+1}}" ng-repeat="cell in data | startFrom:(paging.currentPage-1)*paging.itemsPerPage | limitTo:paging.itemsPerPage track by $index" ng-switch="col.type">
+			<span ng-switch-when="date" ng-bind="cell[col.dataIndex] | date:col.dateFormat"></span>
+			<span ng-switch-default ng-bind="cell[col.dataIndex]"></span>
+		</div>
+		<div ng-if="tableOption.type == 'remote'" tb-cell data-index="{{$index}}" data-record="{{cell[primaryKey]}}" class="tb-row tb-cell row-{{$index+1}}" ng-repeat="cell in data track by $index" ng-switch="col.type">
 			<span ng-switch-when="date" ng-bind="cell[col.dataIndex] | date:col.dateFormat"></span>
 			<span ng-switch-default ng-bind="cell[col.dataIndex]"></span>
 		</div>
@@ -32,7 +36,7 @@
 	></uib-pagination>
 	<div class="pager-limitTo">
 		<label>Per page:</label>
-		<input type="number" class="form-control" ng-model="paging.itemsPerPage" min="1" max="100" step="1">
+		<input type="number" class="form-control" ng-model="paging.itemsPerPage" min="1" max="100" step="1" ng-change="updateTableData()">
 		<label>{{paging.itemsPerPage > 1 ? 'records' : 'record'}}</label>
 	</div>
 </div>
