--- a/src/template/table.html
+++ b/src/template/table.html
@@ -1,17 +1,17 @@
-<div class="excel-table">
-	<div class="tb-col" ng-repeat="col in model">
+<div class="excel-table" style="width:{{totalWidth}}">
+	<div class="tb-col" ng-repeat="col in model" style="width:{{col.width}}">
 		<div tb-cell class="tb-cell header col-{{col.dataIndex}} ng-class:(col.sortable ? 'sortable' : '');">
 			{{col.title}}
 			<span class="pull-right" ng-if="col.sortable">
 				<i class="fa fa-sort-amount-asc"></i>
 			</span>
 		</div>
-		<div ng-if="tableOption.type == 'local'" tb-cell data-index="{{$index}}" data-record="{{cell[primaryKey]}}" class="tb-row tb-cell row-{{$index+1}}" ng-repeat="cell in data | startFrom:(paging.currentPage-1)*paging.itemsPerPage | limitTo:paging.itemsPerPage track by $index" ng-switch="col.type">
-			<span ng-switch-when="date" ng-bind="cell[col.dataIndex] | date:col.dateFormat"></span>
-			<span ng-switch-default ng-bind="cell[col.dataIndex]"></span>
+		<div ng-if="tableOption.allowFilter" tb-cell class="tb-cell cell-filter col-{{col.dataIndex}}">
+			<input ng-disabled="col.allowFilter == false || col.type == 'html'" class="form-control" type="text" ng-model="cellFilter[col.dataIndex]">
 		</div>
-		<div ng-if="tableOption.type == 'remote'" tb-cell data-index="{{$index}}" data-record="{{cell[primaryKey]}}" class="tb-row tb-cell row-{{$index+1}}" ng-repeat="cell in data track by $index" ng-switch="col.type">
+		<div tb-cell data-index="{{$index}}" data-record="{{cell[primaryKey]}}" class="tb-row tb-cell row-{{$index+1}}" ng-repeat="cell in {true: (data | filter:cellFilter | startFrom:(paging.currentPage-1)*paging.itemsPerPage | limitTo:paging.itemsPerPage), false: (data | filter:cellFilter)}[tableOption.type === 'local'] track by $index" ng-switch="col.type">
 			<span ng-switch-when="date" ng-bind="cell[col.dataIndex] | date:col.dateFormat"></span>
+			<span ng-switch-when="html" compile-html="col.html"></span>
 			<span ng-switch-default ng-bind="cell[col.dataIndex]"></span>
 		</div>
 	</div>
