auto set height cell of row to same height

--- a/src/index.less
+++ b/src/index.less
@@ -4,6 +4,9 @@ excel-table {
     overflow: auto;
 }
 .excel-table {
+    display: flex;
+    display: -webkit-flex;
+    display: -moz-box;
 	border: 1px solid #e7eaec;
 	-webkit-user-select: none;  
 	-moz-user-select: none;    
