--- a/src/index.less
+++ b/src/index.less
@@ -19,7 +19,7 @@ excel-table {
 	content: " ";
 }
 .excel-table .tb-cell {
-	border-width: 0px 0px 1px 0px;
+	border-width: 0px 0px 0px 0px;
 	border-style: solid;
 	border-color: #e7eaec;
 	padding: 10px;
@@ -37,9 +37,22 @@ excel-table {
 .excel-table .tb-cell.header {
 	font-weight: 700;
 	background-color: white;
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+    text-align: center;
+}
+.excel-table .tb-cell.header.group-header {
+	border-width: 0px 0px 1px 0px;
+	border-style: solid;
+	border-color: #e7eaec;
+	height: auto;
+}
+.excel-table .tb-col:first-child {
+	border-left-width: 0px;
 }
 .excel-table .tb-col:last-child {
-	border-right-width: 1px;
+	border-right-width: 0px;
 }
 .excel-table .tb-col {
 	display: inline;
@@ -85,6 +98,27 @@ excel-table {
 .table-control .pager-limitTo input.form-control{
 	display: inline-block;
 	width: 70px;
+}
+.tb-col.first-group-header{
+	border-left:0px;
+}
+.tb-col.last-group-header {
+	border-right:0px;
+}
+.excel-table .group-header-item:after{
+	clear: both;
+}
+.excel-table .table-header-container{
+	border-width: 0px 0px 1px 0px;
+	border-style: solid;
+	border-color: #e7eaec;
+}
+.excel-table .table-header-container:after{
+	clear: both;
+	display: block;
+	content: " ";
+    /*display: table-cell;
+    vertical-align: bottom;*/
 }
 // injector
 // endinjector
